# wireguard-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  database.go  go.mod  go.sum  main.go  service.go
api/: schema.go
cmd/wireguard-manager/: main.go
internal/: database.go  service.go
src/: main.rs  route.rs  schema.rs  store.rs  tests.rs
web/: package.json
web/src/components/: HelloWorld.vue
web/src/router/: index.ts
web/src/views/: Dashboard.vue
