[package]
name = "wireguard-manager"
version = "0.1.0"
authors = ["Erik Reinert <e@drn.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8.2"
rkv = "0.16.0"
serde = "1.0.118"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
